fixed file-tree x overflow

--- a/src/app/filesystem/components/file-item/file-item.component.scss
+++ b/src/app/filesystem/components/file-item/file-item.component.scss
@@ -2,6 +2,7 @@
 
 :host {
   display: block;
+  width: fit-content;
 
   app-file-item {
     position: relative;
